methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:5: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireV()
          ^